k8s/overlays/dumachine/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dum-dashboard
  namespace: dum-dashboard
  labels:
    app.kubernetes.io/name: dum-dashboard
    app.kubernetes.io/part-of: dum-dashboard
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - doh.lumilumi.xyz
      secretName: dum-dashboard-lumilumi-tls
  rules:
    - host: doh.lumilumi.xyz
      http:
        paths:
          - path: /camera-stream/video-rtc.js
            pathType: Exact
            backend:
              service:
                name: go2rtc
                port:
                  number: 1984
          - path: /camera-stream/api/ws
            pathType: Exact
            backend:
              service:
                name: go2rtc
                port:
                  number: 1984
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dum-dashboard
                port:
                  number: 3000
